# IncidentScripts

./: .gitignore  README.md  aws-forensic-snapshot(3).py  aws-sg-audit.sh  aws-windows-instances.sh  diascript.ps1  ip-finder-whois-lookup.py  k8sparser11.py  kubectlIR-script.sh  kubectlIR.sh  mac_os_incident_response_script.py  mount-ami-guide.txt  powershell_transform.py  powersheller.py  pyproject.toml  requirements.txt  tetragon_example_minikube  windows-incident-response-script.ps1
aws/: security-group-audit.sh
kubernetes/: Execution-Guide.md  K8s-Security-Guide.md  audit-parser.py  network-policy-audit.py  security-scan.py
malware-analysis/: powershell-analyzer.py
scripts/kubernetes/: basic-collector.sh
scripts/windows/: incident-response.ps1
src/incident_scripts/: cli.py  config.yaml
src/incident_scripts/aws/: forensic_snapshot.py
src/incident_scripts/kubernetes/: audit_parser.py  rbac_analyzer.py
src/incident_scripts/malware/: powershell_analyzer.py  recursive_deobfuscator.py
src/incident_scripts/system/macos/: process-forensics.py  security-audit.py
src/incident_scripts/utils/: config_loader.py  logger.py
system-analysis/docker/: macos-docker.py
system-analysis/macos/: RTR-Usage-Guide.md  docker-integrated.py  incident-response.py
